--- a/view/home.html
+++ b/view/home.html
@@ -9,8 +9,8 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="mensagem-sucesso">
-        <p>Mensagem de Sucesso</p>
+    <div class="{{status-class}}">
+        <p>{{status-message}}</p>
     </div>
     <h1>Scuba<span>PHP</span></h1>
 
@@ -20,9 +20,9 @@
         </div>
         <div class="dados">
             <div class="info-dados">
-                <span class="mensagem-erro">Mensagem de Erro</span>
-                <p>Nome do Usuário:{{field_name}}</p>
-                <p>Email do Usuário:{{field_email}}</p>
+                <span class="mensagem-erro">{{error-message}}</span>
+                <p>Nome do Usuário: {{user-name}}</p>
+                <p>Email do Usuário: {{user-email}}</p>
             </div>
             <div class="delete">
                 <a href="./?page=logout&from=home">
