--- a/view/register.html
+++ b/view/register.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./resource/style.css">
-    <title>Registre</title>
-</head>
-<body>
-    <a href="./?page=login"><h1>Scuba<span>PHP</span></h1></a>
-    <form action="/?page=register" method="POST">
-        <p>Cadastre Um Novo Usuário</p>
-        <div class="mensagem-sucesso">
-            <p>Mensagem de Sucesso</p>
-        </div>
-        <label for="nome">Nome</label>
-        <input type="text" name="name" required>
-        <span class="mensagem-erro">Mensagem de Erro</span>
-        <label for="email">E-mail</label>
-        <input type="email" name="email" required>
-        <span class="mensagem-erro">Mensagem de Erro</span>
-        <label for="senha">Senha</label>
-        <input type="password" name="password" required>
-        <span class="mensagem-erro">Mensagem de Erro</span>
-        <label for="repita-senha">Repita Senha</label>
-        <input type="password" name="password-confirm" required>
-        <span class="mensagem-erro">Mensagem de Erro</span>
-        <input type="submit" value="Salvar">
 
+    <title>Registre</title>
+
+</head>
+
+<body>
+    <a href="./?page=login">
+        <h1>Scuba<span>PHP</span></h1>
+    </a>
+
+    <form action="/?page=register&from=register" method="POST">
+        <p>Cadastre Um Novo Usuário</p>
+
+        <div class="{{status-class}}">
+            <p>{{status-message}}</p>
+        </div>
+
+        <label for="nome">Nome</label>
+        <input type="text" name="person[name]" required value="{{name-value}}">
+        <span class="mensagem-erro">{{name-error}}</span>
+
+        <label for="email">E-mail</label>
+        <input type="email" name="person[email]" required value="{{email-value}}">
+        <span class="mensagem-erro">{{email-error}}</span>
+
+        <label for="senha">Senha</label>
+        <input type="password" name="person[password]" required value="{{password-value}}">
+        <span class="mensagem-erro">{{password-error}}</span>
+
+        <label for="repita-senha">Repita Senha</label>
+        <input type="password" name="person[password-confirm]" required value="{{password-confirm-value}}">
+        <span class="mensagem-erro">{{password-confirm-error}}</span>
+
+        <input type="submit" value="Salvar">
     </form>
 </body>
+
 </html>
