--- a/view/register.html
+++ b/view/register.html
@@ -22,6 +22,8 @@
 
         {{status}}
 
+        <input type="hidden" name="person[mail-validation]" required value="0">
+
         <label for="nome">Nome</label>
         <input type="text" name="person[name]" required value="{{name-value}}">
         {{name-error-message}}
