--- a/view/home.html
+++ b/view/home.html
@@ -25,12 +25,8 @@
                 <p>Email do Usuário: {{user-email}}</p>
             </div>
             <div class="delete">
-                <a href="./?page=logout&from=home">
-                    <img src="./resource/exit-outline.svg">
-                </a>
-                <a href="./?page=delete-account&from=home">
-                    <img src="./resource/trash-outline.svg">
-                </a>
+                <a href="./?page=logout&from=home"><img src="./resource/exit-outline.svg"></a>
+                <a href="./?page=delete-account&from=home"><img src="./resource/trash-outline.svg"></a>
             </div>
         </div>
     </div>
