challenge procedural manner completed

--- a/view/home.html
+++ b/view/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="./resource/style.css">
     <title>Login</title>
 </head>
+
 <body>
-    <div class="{{status-class}}">
-        <p>{{status-message}}</p>
-    </div>
+
+    {{status}}
+
     <h1>Scuba<span>PHP</span></h1>
 
     <div class="info">
@@ -32,4 +34,5 @@
     </div>
 
 </body>
+
 </html>
