--- a/view/not_found.html
+++ b/view/not_found.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,14 @@
     <link rel="stylesheet" href="./resource/style.css">
     <title>404</title>
 </head>
+
 <body>
-    <a href="./?page=login&from=not_found"><h1>Scuba<span>PHP</span></h1></a>
-   <h2>DEU RUIM!</h2>
-   <h3>PÁGINA NÃO ENCONTRADA</h3>
-   <a href="./?page=login&from=not_found">VOLTAR PARA SUPERFICIE</a>
+    <a href="./?page=login&from=not_found">
+        <h1>Scuba<span>PHP</span></h1>
+    </a>
+    <h2>DEU RUIM!</h2>
+    <h3>PÁGINA NÃO ENCONTRADA</h3>
+    <a href="./?page=login&from=not_found">VOLTAR PARA SUPERFICIE</a>
 </body>
+
 </html>
